--- a/_posts/2024-01-23-xpath.md
+++ b/_posts/2024-01-23-xpath.md
@@ -137,9 +137,9 @@ Las expresiones XPath se pueden escribir de dos formas distintas:
 
 Las expresiones XPath se pueden dividir en pasos de búsqueda. Cada paso de búsqueda se puede a su vez dividir en tres partes:
 
-- eje: selecciona nodos elemento o atributo basándose en sus nombres.
-- predicado: restringe la selección del eje a que los nodos cumplan ciertas condiciones.
-- selección de nodos: de los nodos seleccionados por el eje y predicado, selecciona los elementos, el texto que contienen o ambos.
+- Eje: selecciona nodos elemento o atributo basándose en sus nombres.
+- Predicado: restringe la selección del eje a que los nodos cumplan ciertas condiciones.
+- Selección de nodos: de los nodos seleccionados por el eje y predicado, selecciona los elementos, el texto que contienen o ambos.
 
 {:.section}
 ## Sintaxis abreviada
@@ -172,7 +172,10 @@ Veamos unos ejemplos de expresiones XPath de sintaxis abreviada y el resultado d
 
 El eje nos permite seleccionar un subconjunto de nodos del documento y corresponde a recorridos en el árbol del documento. Los nodos elemento se indican mediante el nombre del elemento. Los nodos atributo se indican mediante `@` y el nombre del atributo.
 
-`/`: si está al principio de la expresión, indica el nodo raíz, si no, indica "hijo". Debe ir seguida del nombre de un elemento.
+{:.question}
+¿Se pueden listar directamente los atributos de un elemento?
+
+- `/`: si está al principio de la expresión, indica el nodo raíz, si no, indica "hijo". Debe ir seguida del nombre de un elemento.
 
 ```xpath
 /biblioteca/libro/autor
@@ -214,7 +217,7 @@ No devuelve nada porque `<libro>` no tiene el atributo `fechaNacimiento`.
 > En XPath 1.0 no se puede seleccionar únicamente el valor del atributo, sino que se obtienen respuestas del tipo `nombreDelAtributo=ValorDelAtributo`
 {:.prompt-info}
 
-`//`: indica "descendiente" (hijos, hijos de hijos, etc.).
+- `//`: indica "descendiente" (hijos, hijos de hijos, etc.).
 
 ```xpath
 /biblioteca//autor
@@ -279,7 +282,7 @@ No devuelve nada porque `<libro>` no es descendiente de `<autor>`.
 </libro>
 ```
 
-`|`: permite indicar varios recorridos.
+- `|`: permite indicar varios recorridos.
 
 ```xpath
 //autor|//titulo
@@ -315,6 +318,9 @@ No devuelve nada porque `<libro>` no es descendiente de `<autor>`.
 
 El predicado se escribe entre corchetes, a continuación del eje. Si el eje ha seleccionado unos nodos, el predicado permite restringir esa selección a los que cumplan determinadas condiciones.
 
+{:.subsubsection}
+#### Selección por atributo
+
 `[@atributo]`: selecciona los elementos que tienen el atributo.
 
 ```xpath
@@ -326,7 +332,10 @@ El predicado se escribe entre corchetes, a continuación del eje. Si el eje ha s
 <autor fechaNacimiento="28/03/1936">Mario Vargas Llosa</autor>
 ```
 
-`[número]`: si hay varios resultados selecciona uno de ellos por número de orden; last() selecciona el último de ellos
+{:.subsubsection}
+#### Selección por orden
+
+`[número]`: si hay varios resultados selecciona uno de ellos por número de orden; `last()` selecciona el último de ellos.
 
 ```xpath
 //libro[1]
@@ -352,19 +361,22 @@ El predicado se escribe entre corchetes, a continuación del eje. Si el eje ha s
 </libro>
 ```
 
+{:.subsubsection}
+#### Selección por condición
+
 `[condicion]`: selecciona los nodos que cumplen la condición.
 
 Los predicados permiten definir condiciones sobre los valores de los atributos. En las condiciones se pueden utilizar los operadores siguientes:
 
-- operadores lógicos: `and`, `or`, `not()`
-- operadores aritméticos: `+`, `-`, `*`, `div`, `mod`
-- operadores de comparación: `=`, `!=`, `<`, `>`, `<=`, `>=`
+- Operadores lógicos: `and`, `or`, `not()`
+- Operadores aritméticos: `+`, `-`, `*`, `div`, `mod`
+- Operadores de comparación: `=`, `!=`, `<`, `>`, `<=`, `>=`
 
 Las comparaciones se pueden hacer entre valores de nodos y atributos o con cadenas de texto o numéricas. Las cadenas de texto deben escribirse entre comillas simples o dobles. En el caso de las cadenas numéricas, las comillas son optativas.
 
 La condición puede utilizar el valor de un atributo (utilizando `@`) o el texto que contiene el elemento.
 
-En los ejemplos siguientes se obtienen respectivamente los elementos `<fechaPublicacion>` cuyo atributo año es posterior/mayor a 1970 y los elementos `<libro>` cuyo subelemento `<autor>` tiene como contenido "Mario Vargas Llosa":
+En el siguiente se obtienen los elementos `<fechaPublicacion>` cuyo atributo año es posterior/mayor a 1970:
 
 ```xpath
 //fechaPublicacion[@año>1970]
@@ -373,7 +385,16 @@ En los ejemplos siguientes se obtienen respectivamente los elementos `<fechaPubl
 ```xml
 <fechaPublicacion año="1973"/>
 <fechaPublicacion año="1973"/>
+
+```
+
+En el siguiente se obtienen los elementos `<libro>` cuyo subelemento `<autor>` tiene como contenido "Mario Vargas Llosa":
+
+```xpath
 //libro[autor="Mario Vargas Llosa"]
+```
+
+```xml
 <libro>
   <titulo>Pantaleón y las visitadoras</titulo>
   <autor fechaNacimiento="28/03/1936">Mario Vargas Llosa</autor>
@@ -408,7 +429,7 @@ Para hacer referencia al propio valor del elemento seleccionado se utiliza el pu
 
 Un predicado puede contener condiciones compuestas.
 
-En los ejemplos siguientes se seleccionan, respectivamente , los libros escritos por Mario Vargas Llosa y publicados en 1973 (primer ejemplo) y los libros escritos por Mario Vargas Llosa o publicados en 1973 (segundo ejemplo):
+En el siguiente ejemplo se seleccionan los libros escritos por Mario Vargas Llosa y publicados en 1973:
 
 ```xpath
 //libro[autor="Mario Vargas Llosa" and fechaPublicacion/@año="1973"]
@@ -421,6 +442,8 @@ En los ejemplos siguientes se seleccionan, respectivamente , los libros escritos
   <fechaPublicacion año="1973"/>
 </libro>
 ```
+
+En el siguiente ejemplo se seleccionan los libros escritos por Mario Vargas Llosa o publicados en 1973:
 
 ```xpath
 //libro[autor="Mario Vargas Llosa" or fechaPublicacion/@año="1973"]
@@ -444,7 +467,7 @@ En los ejemplos siguientes se seleccionan, respectivamente , los libros escritos
 </libro>
 ```
 
-Se pueden escribir varios predicados seguidos, cada uno de los cuales restringe los resultados del anterior, como si estuvieran encadenados por la operación lógica and.
+Se pueden escribir varios predicados seguidos, cada uno de los cuales restringe los resultados del anterior, como si estuvieran encadenados por la operación lógica `and`.
 
 En el ejemplo siguiente se seleccionan los libros escritos por Mario Vargas Llosa y publicados en 1973:
 
@@ -465,9 +488,11 @@ En el ejemplo siguiente se seleccionan los libros escritos por Mario Vargas Llos
 
 La selección de nodos se escribe a continuación del eje y el predicado. Si el eje y el predicado han seleccionado unos nodos, la selección de nodos indica con qué parte de esos nodos nos quedamos.
 
-`/node()`: selecciona todos los hijos (elementos o texto) del nodo.
+{:.subsubsection}
+#### Selección de nodos
 
-`//node()`: selecciona todos los descendientes (elementos o texto) del nodo.
+- `/node()`: selecciona todos los hijos (elementos o texto) del nodo.
+- `//node()`: selecciona todos los descendientes (elementos o texto) del nodo.
 
 ```xpath
 //libro/node()
@@ -517,9 +542,11 @@ Mario Vargas Llosa
 <fechaPublicacion año="1969"/>
 ```
 
-`/text()`: selecciona únicamente el texto contenido en el nodo.
+{:.subsubsection}
+#### Selección de texto
 
-`//text()`: selecciona únicamente el texto contenido en el nodo y todos sus descendientes.
+- `/text()`: selecciona únicamente el texto contenido en el nodo.
+- `//text()`: selecciona únicamente el texto contenido en el nodo y todos sus descendientes.
 
 ```xpath
 //autor/text()
@@ -550,8 +577,11 @@ Conversación en la catedral
 Mario Vargas Llosa
 ```
 
-`/*`: selecciona todos los hijos (sólo elementos) del nodo.
-`//*`: selecciona todos los descendientes (sólo elementos) del nodo.
+{:.subsubsection}
+#### Selección comodín
+
+- `/*`: selecciona todos los hijos (sólo elementos) del nodo.
+- `//*`: selecciona todos los descendientes (sólo elementos) del nodo.
 
 ```xpath
 /biblioteca/*
@@ -612,9 +642,8 @@ No devuelve nada porque `<autor>` sólo contiene texto.
 <fechaPublicacion año="1969"/>
 ```
 
-`/@*`: selecciona todos los atributos del nodo.
-
-`//@*`: selecciona todos los atributos de los descendientes del nodo.
+- `/@*`: selecciona todos los atributos del nodo.
+- `//@*`: selecciona todos los atributos de los descendientes del nodo.
 
 ```xpath
 //@*
@@ -653,8 +682,8 @@ Una expresión XPath puede contener varios pasos de búsqueda consecutivos. Cada
 
 En el ejemplo siguiente se obtienen los títulos de los libros publicados después de 1970, mediante dos pasos de búsqueda:
 
-en el primer paso (`//fechaPublicacion[@año>1970]`) se seleccionan los elementos `<fechaPublicacion>` cuyo atributo año es superior a 1970.
-en el segundo paso (`/../titulo`), se seleccionan primero los elementos padre (/..) de los `<fechaPublicacion>` seleccionados en el primer paso de búsqueda (es decir, elementos `<libro>`) y a continuación sus subelementos `<titulo>`.
+1. En el primer paso (`//fechaPublicacion[@año>1970]`) se seleccionan los elementos `<fechaPublicacion>` cuyo atributo año es superior a 1970.
+1. En el segundo paso (`/../titulo`), se seleccionan primero los elementos padre (/..) de los `<fechaPublicacion>` seleccionados en el primer paso de búsqueda (es decir, elementos `<libro>`) y a continuación sus subelementos `<titulo>`.
 
 ```xpath
 //fechaPublicacion[@año>1970]/../titulo
@@ -668,7 +697,8 @@ en el segundo paso (`/../titulo`), se seleccionan primero los elementos padre (/
 Un determinado resultado se puede obtener mediante un sólo paso de búsqueda o mediante varios pasos.
 
 En los ejemplos siguientes se obtienen los libros escritos por Mario Vargas Llosa de dos formas distintas:
-mediante un sólo paso de búsqueda. Se seleccionan los elementos `<libro>` cuyo subelemento `<autor>` tiene como contenido la cadena "Mario Vargas Llosa".
+
+Mediante un sólo paso de búsqueda. Se seleccionan los elementos `<libro>` cuyo subelemento `<autor>` tiene como contenido la cadena "Mario Vargas Llosa".
 
 ```xpath
 //libro[autor="Mario Vargas Llosa"]
@@ -687,7 +717,10 @@ mediante un sólo paso de búsqueda. Se seleccionan los elementos `<libro>` cuyo
 </libro>
 ```
 
-mediante dos pasos de búsqueda. En el primer paso se seleccionan los elementos `<autor>` cuyo contenido es la cadena "Mario Vargas Llosa". En el segundo paso de búsqueda se seleccionan los elementos padre (es decir, los elementos <libro>).
+Mediante dos pasos de búsqueda:
+
+1. En el primer paso se seleccionan los elementos `<autor>` cuyo contenido es la cadena "Mario Vargas Llosa".
+1. En el segundo paso de búsqueda se seleccionan los elementos padre (es decir, los elementos `<libro>`).
 
 ```xpath
 //autor[.="Mario Vargas Llosa"]/..
@@ -768,14 +801,17 @@ Las expresiones XPath pueden anidarse, lo que permite definir expresiones más c
 
 Un ejemplo de expresión anidada sería, por ejemplo, obtener los títulos de los libros publicados el mismo año que la novela "La vida está en otra parte". Esta información no está directamente almacenada en el documento, pero se puede obtener la respuesta en dos pasos:
 
-obtener primero el año en que se publicó la novela "La vida está en otra parte":
+Obtener primero el año en que se publicó la novela "La vida está en otra parte":
 
 ```xpath
 //libro[titulo="La vida está en otra parte"]/fechaPublicacion/@año
+```
+
+```plaintext
 año="1973"
 ```
 
-y obtener después los títulos de los libros publicados en 1973:
+Y obtener después los títulos de los libros publicados en 1973:
 
 ```xpath
 //libro[fechaPublicacion/@año=1973]/titulo
@@ -810,7 +846,7 @@ Como cada una de las expresiones puede escribirse de varias maneras, en realidad
 
 Otro ejemplo de expresión anidada sería obtener los títulos de los libros del mismo autor que la novela "Pantaleón y las visitadoras". Como en el ejemplo anterior, la respuesta puede obtenerse en dos pasos:
 
-obtener primero el autor de la novela "Pantaleón y las visitadoras":
+Obtener primero el autor de la novela "Pantaleón y las visitadoras":
 
 ```xpath
 //libro[titulo="Pantaleón y las visitadoras"]/autor/text()
@@ -820,7 +856,7 @@ obtener primero el autor de la novela "Pantaleón y las visitadoras":
 Mario Vargas Llosa
 ```
 
-y obtener después los títulos de los libros escritos por Mario Vargas Llosa:
+Y obtener después los títulos de los libros escritos por Mario Vargas Llosa:
 
 ```xpath
 //libro[autor="Mario Vargas Llosa"]/titulo
@@ -854,6 +890,31 @@ Incluso se puede omitir la selección de nodos /text() de la segunda expresión 
 <titulo>Pantaleón y las visitadoras</titulo>
 <titulo>Conversación en la catedral</titulo>
 ```
+
+### Más funciones
+
+Además de la función `last()` vista anteriormente que selecciona el último elemento del conjunto seleccionado, existen otras funciones que nos permiten realizar diferentes operaciones:
+
+- `position()`, devuelve un número igual a la posición del elemento actual.
+- `count()`, cuenta el número de elementos seleccionados.
+- `sum()`, devuelve la suma de los elementos seleccionado.
+- `max()`, devuelve el máximo de los elementos seleccionados.
+- `min()`, devuelve el mínimo de los elementos seleccionados.
+- `avg()`, devuelve la media de los elementos seleccionados.
+- `name()`, devuelve el nombre del elemento seleccionado.
+- `concat(<cad1>, <cad2>, ...)`, concatena cadenas.
+- `name()`, devuelve el nombre del elemento seleccionado.
+- `concat(<cad1>, <cad2>, ...)`, concatena cadenas.
+- `starts-with(<cad1>, <cad2>)`, devuelve verdadero cuando la cadena cad1 tiene como prefijo cad2.
+- `contains(<cad1>, <cad2>)`, devuelve verdadero cuando la cadena cad1 contiene cad2.
+- `string-length(<argumento>)`, devuelve el número de caracteres de su argumento.
+- `div()`, divide.
+- `mod()`, calcula el resto de la división.
+- `data(<expresión XPath>)`, devuelve el texto de los nodos de la expresión sin las etiquetas.
+- `number(<argumento>)`, para convertir a número lo introducido en el argumento.
+- `string(<argumento>)`, convierte el argumento en string.
+- `compare(<exp>, <exp2>)`, compara las dos expresiones, devuelve 0 si son iguales, 1 si exp1>exp2 y -1 si exp1<exp2.
+- `lower-case(<cadena>)`, convierte a minúsculas la cadena.
 
 ## Bibliografía
 
