--- a/_posts/2024-01-23-xpath.md
+++ b/_posts/2024-01-23-xpath.md
@@ -167,6 +167,9 @@ Veamos unos ejemplos de expresiones XPath de sintaxis abreviada y el resultado d
 </biblioteca>
 ```
 
+> En el artículo [XPath: XML Path language (Resumen)](https://www.mclibre.org/consultar/xml/lecciones/xml-xpath-resumen.html) tienes un resumen de la sintaxis abreviada de XPath.
+{:.prompt-tip}
+
 {:.subsection}
 ### Eje (en inglés, axis)
 
