--- a/_posts/2024-01-24-xquery.md
+++ b/_posts/2024-01-24-xquery.md
@@ -6,6 +6,9 @@ tags: [desarrollo de aplicaciones multiplataforma, lenguajes de marcas y sistema
 img_path: /assets/img/xpath/
 ---
 
+> Artículo en construcción.
+{:.prompt-warning}
+
 ## Introducción
 
 
@@ -14,3 +17,8 @@ img_path: /assets/img/xpath/
 
 - <https://www.w3schools.com/xml/xquery_intro.asp>
 - <https://www.w3schools.com/xml/xml_xquery.asp>
+- <https://www.ibm.com/docs/es/db2/11.1?topic=data-introduction-xquery>
+- <https://es.wikipedia.org/wiki/XQuery>
+- <https://www.discoduroderoer.es/tutorial-sobre-como-usar-base-x/>
+- <https://www.discoduroderoer.es/formas-de-mostrar-nodos-en-xquery/>
+- <https://www.discoduroderoer.es/ordenacion-en-xquery/>
