--- a/_posts/2024-01-24-xquery.md
+++ b/_posts/2024-01-24-xquery.md
@@ -122,7 +122,7 @@ Lo hemos utilizado para incluirlo dentro de la etiqueta `titulo`:
 <titulo>(3) Data on the Web</titulo>
 ```
 
-Si quisiéramos englobar todas las etiquetas anteriores en una superior, tendríamos que encerrar la consulta completa entre llaves { } como vemos en este ejemplo:
+Si quisiéramos englobar todas las etiquetas anteriores en una superior, tendríamos que encerrar la consulta completa entre llaves `{ }` como vemos en este ejemplo:
 
 ```xml
 <biblioteca> 
