--- a/_posts/2024-01-21-xsd.md
+++ b/_posts/2024-01-21-xsd.md
@@ -361,9 +361,10 @@ Nótese que, en el archivo `sitemap.xsd`{: .filepath}, la etiqueta <xsd:schema> 
 
 Los elementos simples solamente pueden contener texto (caracteres). Dicho de otro modo, los elementos simples no pueden contener a otro u otros elementos (hijos), ni tampoco pueden tener atributos. Ahora bien, el texto contenido en un elemento simple, puede ser de diferentes tipos de datos predefinidos en W3C XML Schema o definidos por el usuario (programador).
 
-Los tipos de datos predefinidos pueden ser primitivos (`string`, `boolean`, `decimal`...) o derivados de estos (`integer`, `ID`, `IDREF`...). Véase en el siguiente enlace, una imagen donde se puede ver la relación que existe entre todos ellos:
+Los tipos de datos predefinidos pueden ser primitivos (`string`, `boolean`, `decimal`...) o derivados de estos (`integer`, `ID`, `IDREF`...). En la siguiente imagen se puede ver la relación que existe entre todos ellos:
 
-- <https://goo.gl/lK2l2I>
+![Jerarquía de tipos de datos de XML Schema](w3c-xml-schema-type-hierarchy.gif)
+_Jerarquía de tipos de datos de XML Schema_
 
 Para definir un elemento simple se puede utilizar la siguiente sintaxis:
 
