--- a/_posts/2024-02-21-recetas.md
+++ b/_posts/2024-02-21-recetas.md
@@ -204,6 +204,8 @@ Lecciones aprendidas:
 
 ## Boloñesa
 
+## Judías blancas
+
 ## Albóndigas en salsa española
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/CN-u-fKDt8U?si=SmAVxqHoyRUuWI3t" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -235,7 +237,88 @@ Lecciones aprendidas:
 
 ### Compras
 
+#### Mercadona
+
+- Tomate frito
+- Tomate en lata
+- Pan brioche
+- Anchoas en aceite
+- Kefir
+- Chipirones
+- Gambones
+- Pan tostado integral
+- Pescado
+
+#### Lidl
+
+- Cottage cheese
+- Yogurt
+- Berlina choco blanco
+- Café bio
+
+## Carrefour
+
+- Descuento por pronta caducidad es del 50%.
+- Polenta
+
+#### BonArea
+
+- Pollo
+
+#### Mercado
+
+- Fruta, verdura y ternera.
+
 ### Horno
+
+![perfectCooking 3D](22081841_Siemens_Home_Appliances_Ovens_Picto_4D-hot-air.webp)
+_perfectCooking 3D_
+
+La función perfectCooking 3D permite colocar la bandeja en cualquiera de los 4 niveles con resultados perfectamente uniformes, incluso cocinando en 3 niveles a la vez.
+
+![Aire caliente suave](22082304_Siemens_Home_Appliances_Ovens_Picto_hot-air-gentle.webp)
+_Aire caliente suave_
+
+El ajuste Aire caliente suave es el más adecuado para cocinar lentamente pollo o piezas pequeñas de carne sin previo precalentamiento.
+
+![Calor superior-inferior](22082409_Siemens_Home_Appliances_Ovens_Picto_top-bottom-heating.webp)
+_Calor superior-inferior_
+
+El modo superior-inferior se utiliza para hornear alimentos en un solo nivel. El calor se emite desde arriba y desde abajo. Esta función se utiliza para medir el consumo de energía en el modo convencional.
+
+![Calor inferior](22081846_Siemens_Home_Appliances_Ovens_Picto_bottom-heating.webp)
+_Calor inferior_
+
+El calor se emite desde abajo. Este modo es perfecto para conservar el calor, dorar y para la fase final del horneado.
+
+![Grill con aire caliente](22082305_Siemens_Home_Appliances_Ovens_Picto_hot-air-grill.webp)
+
+Se utiliza para asar piezas enteras de carnes y pescados. El grill y el ventilador se encienden y apagan alternativamente, haciendo que el aire caliente circule alrededor de los alimentos.
+
+![Grill (superficie amplia)](22082301_Siemens_Home_Appliances_Ovens_Picto_grill-large-area.webp)
+_Grill (superficie amplia)_
+
+Toda la superficie que hay debajo del grill se calienta para cocinar pequeñas cantidades de alimentos como filetes, salchichas o dorar pan, incluso para gratinar.
+
+![Grill (superficie reducida)](22082302_Siemens_Home_Appliances_Ovens_Picto_grill-small-area.webp)
+_Grill (superficie reducida)_
+
+Solo se calienta la superficie central que queda bajo la resistencia del grill. Es perfecto para cantidades más pequeñas o cuando cocinas solo para 2.
+
+![Pizza](22082400_Siemens_Home_Appliances_Ovens_Picto_pizza-setting.webp)
+_Pizza_
+
+Una función para preparar pizza y platos que requieren un gran calor inferior. La resistencia inferior y circular se ponen en funcionamiento para conseguir bases crujientes.
+
+![Precalentamiento rápido](22082139_Siemens_Home_Appliances_Ovens_Picto_fast-preheat.webp)
+_Precalentamiento rápido_
+
+El horno alcanza la temperatura deseada muy rápidamente sin usar energía adicional al activar los elementos calefactores simultáneamente.
+
+![Luz de horno](22084103_Siemens_Home_Appliances_Ovens_Picto_oven-light.webp)
+_Luz de horno_
+
+Enciende o apaga la iluminación interior.
 
 ### Sartenes para toda la vida
 
@@ -243,9 +326,12 @@ Si queremos tener sartenes para toda la vida podemos optar por sartenes de acero
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/ybpgsIkBtOA?si=1tffZ7KxXLv-uh6O" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
-### Cuchillos
+<iframe width="560" height="315" src="https://www.youtube.com/embed/MdaAWa1vzJY?si=cc_BYD40dawu_yx2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
+### Cuchillos y afilado
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/sJp569u3WKc?si=tbeiLpT3kXMmzgER" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 ## Bibliografía
 
+- <https://www.siemens-home.bsh-group.com/es/catalogo-electrodomesticos/cocina/hornos/simbolos#/Togglebox=9460927-14764005-1/>
