--- a/_posts/2024-02-21-recetas.md
+++ b/_posts/2024-02-21-recetas.md
@@ -29,16 +29,17 @@ Este artículo es un compendio de recetas que he hecho que me han gustado.
 - Opcional: 100gr de queso fresco tipo burgos.
 - 5 huevos.
 - Un poco de sal.
-- 40 gr de eritritol.
+- 40-50 gr de eritritol.
 - 10gr de harina o 10 gr de maicena.
 
 Tiempos y temperaturas:
 
-- 25 minutos a 200ºC.
+- 25 minutos a 200ºC. Modo "Aire caliente suave".
 
 Lecciones aprendidas:
 
 - Atemperar los ingredientes antes de hacer la tarta.
+- Si queremos salvar la tarta le podemos echar Crema de lotus.
 
 ## Tarta de limón y merengue
 
@@ -65,7 +66,7 @@ Ingredientes:
 
 Utensilios:
 
-- Molde de 20 centímetros de diámtero base.
+- Molde de 20 centímetros de diámetro base.
 
 Tiempos y temperaturas:
 
@@ -79,7 +80,7 @@ Lecciones aprendidas:
 - 5 claras de huevo es mucho para la tarta. Con 2 ó 3 seguramente será más que suficiente.
 - Echar limón la merengue.
 
-## Fideuá de Gandia
+## Fideuá de Gandia con ali oli
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/eWkV0m9H4L0?si=0Dlk0XJidvo05aP6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
@@ -91,6 +92,14 @@ Ingredientes:
 - 8 gambones.
 - 2 cebollas.
 - Azafrán.
+
+Ingredientes ali oli:
+
+- 1 huevo.
+- 4 gr de Sal.
+- 2 dientes de ajo.
+- 10 gr de vinagre o zumo de limón.
+- 200 ml de aceite de girasol.
 
 Lecciones aprendidas:
 
@@ -151,7 +160,7 @@ Ingredientes:
 
 Lecciones aprendidas:
 
-- Poner la masa 2 minutos en el suelo del horno ya caliente.
+- Poner la masa 2 minutos en el suelo del horno ya caliente para que la masa no salga cruda.
 
 ## Tortilla de patatas jugosa y con cebolla
 
@@ -220,7 +229,7 @@ Lecciones aprendidas:
 
 Lecciones aprendidas:
 
-- No triturar hasta el final
+- No triturar hasta que todas las verduras estén cocidas.
 
 ## Hamburguesas caseras
 
