--- a/_posts/2024-02-21-recetas.md
+++ b/_posts/2024-02-21-recetas.md
@@ -246,37 +246,32 @@ Lecciones aprendidas:
 
 ### Compras
 
-#### Mercadona
+#### 
 
-- Tomate frito
-- Tomate en lata
-- Pan brioche
-- Anchoas en aceite
-- Kefir
-- Chipirones
-- Gambones
-- Pan tostado integral
-- Pescado
-
-#### Lidl
-
-- Cottage cheese
-- Yogurt
-- Berlina choco blanco
-- Café bio
-
-## Carrefour
-
-- Descuento por pronta caducidad es del 50%.
-- Polenta
-
-#### BonArea
-
-- Pollo
-
-#### Mercado
-
-- Fruta, verdura y ternera.
+| Ingrediente | Mercadona | Lidl | Carrefour | BonArea | Eroski |
+|---|---|---|---|---|---|
+| Tomate frito | 🔝 |  |  |  |  |
+| Tomate en lata | 🔝 | X | X | | X |
+| Pan brioche | X |  |  |  | X |
+| Anchoas en aceite | X |  |  |  |  |
+| Kefir | X |  | X | X |  |
+| Chipirones | X |  |  |  |  |
+| Gambones | X | X | X |  |  |
+| Pan tostado integral | X |  |  |  | X |
+| Pescado | X |  | X |  |  |
+| Maíz | 🔝 | X | X |  |  |
+| Huevos | X | X |  |  |  |
+| Cottage cheese |  | X |  |  |  |
+| Yogurt |  | 🔝 |  |  |  |
+| Berlina choco blanco | X | 🔝 |  |  |  |
+| Café bio |  | 🔝 |  |  |  |
+| Descuento por pronta caducidad |  |  | 50% |  |  |
+| Polenta |  |  | X |  |  |
+| Jamón serrano | X |  |  |  |  |
+| Pollo | X | X | X | 🔝 |  |
+| Mozzarella fresca | X | X | X |  |  |
+| Harina | X | X | X |  |  |
+| Sal marina | X | X | X |  |  |
 
 ### Horno
 
