--- a/_posts/2024-01-30-tarea-xsd.md
+++ b/_posts/2024-01-30-tarea-xsd.md
@@ -105,7 +105,7 @@ Comprobar con Visual Studio Code o XML Copy Editor que `a01_validarMarcadores.xm
 Comprobar con un validador online de sitemaps XML que `a02_validarSitemap.xml`{: .filepath} es válido.
 
 {:.activity}
-### Mensaje entre personas
+### (Voluntaria) Mensaje entre personas
 
 Dado el siguiente archivo `a03_mensaje.xsd`{: .filepath}. Corregir los errores cometidos en el documento XML `a03_mensaje.xml`{: .filepath}, para que sea válido. Para ello, no modificar la cuarta línea de código de `a03_mensaje.xml`{: .filepath}:
 
