--- a/_posts/2022-05-20-redes-locales-21-22.md
+++ b/_posts/2022-05-20-redes-locales-21-22.md
@@ -14,8 +14,8 @@ tags: [redes locales]
 - UD 1 - [Introducción a las redes locales](/posts/introduccion-redes-locales/)
   - [Clasificación de redes](/posts/clasificacion-de-redes/)
   - [Modelos de red: OSI vs TCP/IP](/posts/modelos-red-osi-vs-tcp-ip/)
-- UD 2 - [Instalación física de una red](/posts/capa-fisica/) ➡️ CAPA FÍSICA
-- UD 3 - [Instalación y configuración de los equipos de red](/posts/capa-red/) ➡️ CAPA DE ENLACE DE DATOS, DE RED Y DE TRANSPORTE
+- UD 2 - [Instalación física de una red](/posts/capa-fisica/) → CAPA FÍSICA
+- UD 3 - [Instalación y configuración de los equipos de red](/posts/capa-red/) → CAPA DE ENLACE DE DATOS, DE RED Y DE TRANSPORTE
   - [Direcciones IPv4](/posts/direcciones-ipv4/)
   - [¿Qué son las subredes?](/posts/subredes/)
   - [Actividad resuelta de subredes](/posts/actividad-resuelta-subredes/)
@@ -24,7 +24,7 @@ tags: [redes locales]
 
 ### Teoría
 
-- UD 4 - [Despliegue y mantenimiento de los servicios de red](/posts/despliegue-mantenimiento-de-los-servicios-de-red/) ➡️ CAPA DE APLICACIÓN
+- UD 4 - [Despliegue y mantenimiento de los servicios de red](/posts/despliegue-mantenimiento-de-los-servicios-de-red/) → CAPA DE APLICACIÓN
   - [Sistemas de almacenamiento en red](/posts/sistemas-de-almacenamiento-en-red/)
 - UD 5 - [Dispositivos específicos de la red local](/posts/dispositivos-especificos-de-la-red-local/)
   - [¿Qué es una VLAN?](/posts/vlan/)
@@ -47,7 +47,7 @@ tags: [redes locales]
 - UD 7 - [Redes mixtas integradas](/posts/redes-mixtas-integradas/)
   - [Redes inalámbricas](/posts/redes-inalambricas/)
   - [Protocolo IPv6](/posts/protocolo-ipv6/)
-- UD 8 - Resolución de incidencias de una red de área local ➡️ UNIDAD 7 DEL LIBRO!!!
+- UD 8 - Resolución de incidencias de una red de área local → UNIDAD 7 DEL LIBRO!!!
 - UD 9 - [Cumplimiento de las normas de prevención de riesgos laborales y protección medioambiental](/posts/prevencion-de-riesgos-laborales)
 
 ### Tutoriales
@@ -91,7 +91,7 @@ Para el próximo curso se organizará el temario de la siguiente manera:
 
 Qué NO dar...
 
-- VPN ➡️ Esto se da en Seguridad Informática
-- Proxies ➡️ Esto se da en Seguridad Informática o Servicios en Red
-- DMZ ➡️ Esto se da en Seguridad Informática
-- Comandos del SO ➡️ Esto se da en Sistemas Operativos Monopuesto
+- VPN → Esto se da en Seguridad Informática
+- Proxies → Esto se da en Seguridad Informática o Servicios en Red
+- DMZ → Esto se da en Seguridad Informática
+- Comandos del SO → Esto se da en Sistemas Operativos Monopuesto
